--- a/src/components/memeItem/memeItem.css
+++ b/src/components/memeItem/memeItem.css
@@ -1,6 +1,6 @@
 .meme-item {
-  width: 18%;
-  height: 150px;
+  width: 22%;
+  height: 300px;
   padding: 10px;
   position: relative;
   display: inline-block;
@@ -11,7 +11,7 @@
 
 .meme-img {
   width: 100%;
-  height: 150px;
+  height: 100%;
   border-radius: 8px;
   border: 3px solid white;
   position: absolute;
