--- a/src/components/myMemes/myMemes.css
+++ b/src/components/myMemes/myMemes.css
@@ -1,3 +1,13 @@
+.my-meme-item {
+  width: 220px;
+
+  padding: 10px;
+  position: relative;
+  display: inline-block;
+  text-align: left;
+  margin: 5px;
+  cursor: pointer;
+}
 .my-meme-img {
   position: relative;
   display: inline-block;
@@ -5,4 +15,46 @@
   width: 220px;
   border-radius: 4px;
   border: 3px solid white;
+}
+
+.my-meme-text {
+  width: 100%;
+  text-align: right;
+  vertical-align: top;
+  position: absolute;
+  border-radius: 5px;
+  bottom: 0;
+  animation-name: fade-in;
+  animation-duration: 1s;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.no-text {
+  display: none;
+}
+
+.darken-img {
+  background-color: gray;
+  filter: brightness(10%);
+  animation-name: darken;
+  animation-duration: 1s;
+}
+
+@keyframes darken {
+  from {
+    filter: brightness(90%);
+  }
+  to {
+    filter: brightness(10%);
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
 }
